--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Timers Exercise</h1>
-    <p>In the console, call the function <span class="function">countDown(num)</span> with a single argument, a number. The function will countdown from that number to 0, at which it will print "DONE!" </p>
+    <p>In the console, call the function <span class="function">countDown(num)</span> with a single argument, a number. The function will countdown from that number to 0, and it will print "DONE!" </p>
     <p>In the console, call the function <span class="function">randomGame()</span> without any arguments. The function will generate random numbers ranging from 0 to 1, counting each time a number is generated until a number greater than .75 appears. The random selector will stop and log how many times it took to reach that number.</p>
     <script src ="countdown.js"></script>
     <script src ="randomGame.js"></script>
